@@ -48,10 +48,10 @@ SVGFESpecularLightingElement::~SVGFESpecularLightingElement()
 {
 }
 
-ANIMATED_PROPERTY_DEFINITIONS(SVGFESpecularLightingElement, String, In1, in1, SVGNames::in)
-ANIMATED_PROPERTY_DEFINITIONS(SVGFESpecularLightingElement, float, SpecularConstant, specularConstant, SVGNames::specularConstant)
-ANIMATED_PROPERTY_DEFINITIONS(SVGFESpecularLightingElement, float, SpecularExponent, specularExponent, SVGNames::specularExponent)
-ANIMATED_PROPERTY_DEFINITIONS(SVGFESpecularLightingElement, float, SurfaceScale, surfaceScale, SVGNames::surfaceScale)
+ANIMATED_PROPERTY_DEFINITIONS(SVGFESpecularLightingElement, String, In1, in1, SVGNames::inAttr)
+ANIMATED_PROPERTY_DEFINITIONS(SVGFESpecularLightingElement, float, SpecularConstant, specularConstant, SVGNames::specularConstantAttr)
+ANIMATED_PROPERTY_DEFINITIONS(SVGFESpecularLightingElement, float, SpecularExponent, specularExponent, SVGNames::specularExponentAttr)
+ANIMATED_PROPERTY_DEFINITIONS(SVGFESpecularLightingElement, float, SurfaceScale, surfaceScale, SVGNames::surfaceScaleAttr)
 ANIMATED_PROPERTY_DEFINITIONS_WITH_CUSTOM_IDENTIFIER(SVGFESpecularLightingElement, float, KernelUnitLengthX, kernelUnitLengthX, SVGNames::kernelUnitLengthAttr, "kernelUnitLengthX")
 ANIMATED_PROPERTY_DEFINITIONS_WITH_CUSTOM_IDENTIFIER(SVGFESpecularLightingElement, float, KernelUnitLengthY, kernelUnitLengthY, SVGNames::kernelUnitLengthAttr, "kernelUnitLengthY")
 
